# api/src/modules/parking/dto/update-parking.dto.ts
@@ -1,0 +1,5 @@
+export class UpdateParkingDto {
+  name?: string;
+  address?: string;
+  pricePerHour?: number;
+}
